--- a/william-profile/package.json
+++ b/william-profile/package.json
@@ -14,7 +14,9 @@
     "axios": "^1.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.0",
     "react-scripts": "^5.0.1",
+    "router-dom": "^2.2.11",
     "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4"
   },
