--- a/william-profile/package.json
+++ b/william-profile/package.json
@@ -1,6 +1,7 @@
 {
   "name": "william-profile",
   "version": "0.1.0",
+  "homepage": ".",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.3",
