--- a/william-profile/package.json
+++ b/william-profile/package.json
@@ -48,6 +48,7 @@
     ]
   },
   "devDependencies": {
-    "react-modal": "^3.16.1"
+    "react-modal": "^3.16.1",
+    "react-responsive-carousel": "^3.2.23"
   }
 }
