add freejoas project images

--- a/william-profile/src/assets/datas/ProjectData.json
+++ b/william-profile/src/assets/datas/ProjectData.json
@@ -1,6 +1,6 @@
 {
     "en": [
-        {   
+        {
             "id": 1,
             "title": "Arcade Shooter",
             "status": "Completed",
@@ -8,7 +8,11 @@
             "description": "This is a simple 2D arcade shooting game where player takes control of a spaceship in space, tasked with shooting down enemy ships. Players can enhance their spaceship by collecting power-ups, such as increasing weapon firepower or boosting defense capabilities. Due to being a self-selected learning project undertaken during school, the overall completion level of the project is relatively low. However, valuable experience has been gained during the development process, particularly in the application of teamwork and SCRUM framework.",
             "tech": [
                 "Unity 2D",
-                "C#"
+                "C#",
+                "SCRUM",
+                "OOP",
+                "Game Design",
+                "Version Control"
             ],
             "tasks": [
                 {
@@ -23,9 +27,10 @@
                     "id": 3,
                     "task": "Designed and developed enemy system and weapon system"
                 }
-            ]
+            ],
+            "github": "https://github.com/Arcade-Shooter/GameBuild"
         },
-        {   
+        {
             "id": 2,
             "title": "Freejoas",
             "status": "In Progress",
@@ -52,9 +57,10 @@
                     "id": 3,
                     "task": "Designing and developing the database with MongoDB ."
                 }
-            ]
+            ],
+            "github": "https://github.com/wsking233/Freejoas-backend"
         },
-        {   
+        {
             "id": 3,
             "title": "Flatties",
             "status": "In Progress",
@@ -83,7 +89,8 @@
                     "id": 3,
                     "task": "Design the app architecture as a member of a SCRUM team."
                 }
-            ]
+            ],
+            "github": "https://github.com/Puddle-Dev/Flatties"
         }
     ],
     "zh": [
@@ -111,9 +118,10 @@
                     "id": 3,
                     "task": "设计和开发敌人系统和武器系统。"
                 }
-            ]
+            ],
+            "github": "https://github.com/Arcade-Shooter/GameBuild"
         },
-        {   
+        {
             "id": 2,
             "title": "Freejoas",
             "status": "项目开发中",
@@ -140,7 +148,8 @@
                     "id": 3,
                     "task": "使用 MongoDB 设计和开发数据库。"
                 }
-            ]
+            ],
+            "github": "https://github.com/wsking233/Freejoas-backend"
         },
         {
             "id": 3,
@@ -170,7 +179,8 @@
                     "id": 3,
                     "task": "使用 MongoDB 设计和开发数据库。"
                 }
-            ]
+            ],
+            "github": "https://github.com/Puddle-Dev/Flatties"
         }
     ]
 }
