add project detail page

--- a/william-profile/public/manifest.json
+++ b/william-profile/public/manifest.json
@@ -8,9 +8,9 @@
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "W.W-White.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "273x139"
     },
     {
       "src": "logo512.png",
